--- a/job_searching_platform_frontend/package.json
+++ b/job_searching_platform_frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@supabase/supabase-js": "^2.78.0",
     "@tanstack/react-query": "^5.90.16",
     "@testing-library/user-event": "^14.6.1",
     "react": "^18.2.0",
