--- a/job_searching_platform_frontend/package.json
+++ b/job_searching_platform_frontend/package.json
@@ -33,6 +33,8 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^14.3.1",
     "cross-env": "^7.0.3"
   }
 }
